--- a/ems/templates/auth/login.html
+++ b/ems/templates/auth/login.html
@@ -25,7 +25,7 @@ https://www.tooplate.com/view/2123-simply-amazed
                         <div class="col-lg-6 mb-4 contact-form">
                             <div class="form tm-contact-item-inner">
                     		<div class="title">
-                        	    <h3>Register</h3>
+                        	    <h3>Login</h3>
                     	        </div>
                     		<form action="#" method="POST">
                         	    <div class="form-group">
@@ -35,7 +35,7 @@ https://www.tooplate.com/view/2123-simply-amazed
                             	        <input name="password" type="text" class="form-control" placeholder="Password">
                         	    </div>
                         	    <div class="form-group text-right">
-                            	        <input type="submit" class="btn btn-primary" value="Register">
+                            	        <input type="submit" class="btn btn-primary" value="Login">
                             	    </div>
                     		</form>
                             </div>
