--- a/ems/static/tooplate-simply-amazed.css
+++ b/ems/static/tooplate-simply-amazed.css
@@ -7,6 +7,9 @@ body {
   color: #6c757d;
   line-height: 1.5;
   background-color: #fff;
+  /*background-image: url("img/section-1-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;*/
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 }
