--- a/ems/templates/auth/login.html
+++ b/ems/templates/auth/login.html
@@ -6,38 +6,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
-    
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" type="text/css" /> 
-    <link rel="stylesheet" href="css/slick.css" type="text/css" />   
-    <link rel="stylesheet" href="css/tooplate-simply-amazed.css" type="text/css"/>
-<!--
-
-Tooplate 2123 Simply Amazed
-
-https://www.tooplate.com/view/2123-simply-amazed
-
--->
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" type="text/css" > 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/slick.css') }}" >   
+   <!-- <link rel="stylesheet" href="{{ url_for('static', filename='tooplate-simply-amazed.css') }}" > -->
+    <style>
+        .flash { 
+             margin: 1em;
+             padding: 1em;
+             color: red;
+             <!--background: #a71f1f80;-->
+             border: 1px solid #377ba8;
+         }
+       
+    </style>
 </head>
-<body>
-<div class="container">
-        	    <div class="row">
-                        <div class="col-lg-6 mb-4 contact-form">
-                            <div class="form tm-contact-item-inner">
-                    		<div class="title">
-                        	    <h3>Login</h3>
-                    	        </div>
-                    		<form action="#" method="POST">
-                        	    <div class="form-group">
-                                    	<input name="username" type="text" class="form-control" placeholder="Username">
-                        	    </div>
-                        	    <div class="form-group">
-                            	        <input name="password" type="text" class="form-control" placeholder="Password">
-                        	    </div>
-                        	    <div class="form-group text-right">
-                            	        <input type="submit" class="btn btn-primary" value="Login">
-                            	    </div>
-                    		</form>
+
+<body style="background-color: #356ba2">
+    <!-- flashed messages go here
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}-->
+
+
+    <div id="outer">
+        
+        <header class="header order-last" id="tm-header">
+            <nav class="navbar">
+                <div class="collapse navbar-collapse single-page-nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#section-1"><span class="icn"><i class="fas fa-2x fa-air-freshener"></i></span> Our Company</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#section-2"><span class="icn"><i class="fab fa-2x fa-battle-net"></i></span> Pricing</a>
+                        </li>
+			<li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.login') }}"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Login</a>
+                        </li>
+			<li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.register') }}"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Register</a>
+                        </li>
+                   
+                        <li class="nav-item">
+                            <a class="nav-link" href="#section-5"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+        <section class="contact-section section" id="section-4">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6 mb-4 contact-form">
+                        <div class="form tm-contact-item-inner">
+                            <div class="title">
+                                <h3>Login</h3>
                             </div>
-            		</div>
+                            <form action="#" method="POST">
+				
+                                <div class="form-group">
+                                   Username <input name="username" type="text" class="form-control" placeholder="Username" required>
+                                </div>
+                                <div class="form-group">
+                                   Password <input name="password" type="text" class="form-control" placeholder="Password" required>
+                                </div>
+                                    {% for message in get_flashed_messages() %}
+				        <div class="flash">{{ message }}</div>
+				    {% endfor %}
+
+                                <div class="form-group text-right">
+                                    <input type="submit" class="btn btn-primary" value="Login">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer container container-2">
+            <div class="row">
+                <p class="col-sm-7">Copyright 2021 Simply Amazed Co.</p>
+            </div>
+        </footer>
+    </div>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery.singlePageNav.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/parallax.min.js"></script>
+    <script src="js/templatemo-script.js"></script>
 </body>
+</html>
