--- a/ems/templates/auth/register.html
+++ b/ems/templates/auth/register.html
@@ -6,62 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" type="text/css" /> 
-    <link rel="stylesheet" href="css/slick.css" type="text/css" />   
-    <link rel="stylesheet" href="css/tooplate-simply-amazed.css" type="text/css" />
-    <style>
-        .navbar {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            background-color: #f8f9fa;
-        }
-
-        .navbar-nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .navbar-nav .nav-item {
-            margin: 0 10px;
-        }
-
-        .contact-form {
-            width: 900px;
-            margin: 0 auto;
-        }
-
-        .form {
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-        }
-
-        .container-2 {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='all.min.css') }}" > 
+    <!--<link rel="stylesheet" href="{{ url_for('static', filename='slick.css') }}" > -->
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='tooplate-simply-amazed.css') }}" >-->
+    
 </head>
 
-<body>
+<body style="background-color: #356ba2">
     <div id="outer">
-        <header class="header" id="tm-header">
+        
+        <header class="header order-last" id="tm-header">
             <nav class="navbar">
-                <div class="navbar-collapse single-page-nav">
+                <div class="collapse navbar-collapse single-page-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('auth.login') }}"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Login</a>
+                            <a class="nav-link" href="#section-1"><span class="icn"><i class="fas fa-2x fa-air-freshener"></i></span> Our Company</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#section-2"><span class="icn"><i class="fab fa-2x fa-battle-net"></i></span> Pricing</a>
+                        </li>
+			<li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('auth.login') }}"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Login</a>
+                        </li>
+			<li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.register') }}"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Register</a>
+                        </li>
+                   
+                        <li class="nav-item">
+                            <a class="nav-link" href="#section-5"><span class="icn"><i class="far fa-2x fa-comments"></i></span> Contact Us</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
-
         <section class="contact-section section" id="section-4">
             <div class="container">
                 <div class="row justify-content-center">
@@ -72,23 +50,26 @@
                             </div>
                             <form action="#" method="POST">
 				<div class="form-group">
-                                   First name <input name="firstname" type="text" class="form-control" placeholder="First name">
+                                   First name <input name="firstname" type="text" class="form-control" placeholder="First name" required>
                                 </div>
 				<div class="form-group">
-                                   Last name <input name="lastname" type="text" class="form-control" placeholder="Last name">
+                                   Last name <input name="lastname" type="text" class="form-control" placeholder="Last name" required>
                                 </div>
 				<div class="form-group">
-                                   Email <input name="email" type="text" class="form-control" placeholder="Email">
+                                   Email <input name="email" type="text" class="form-control" placeholder="Email" required>
                                 </div>
 				<div class="form-group">
-                                   Phone number <input name="phonenumber" type="text" class="form-control" placeholder="Phone number">
+                                   Phone number <input name="phonenumber" type="text" class="form-control" placeholder="Phone number" required>
                                 </div>
                                 <div class="form-group">
-                                   Username <input name="username" type="text" class="form-control" placeholder="Username">
+                                   Username <input name="username" type="text" class="form-control" placeholder="Username" required>
                                 </div>
                                 <div class="form-group">
-                                   Password <input name="password" type="text" class="form-control" placeholder="Password">
+                                   Password <input name="password" type="text" class="form-control" placeholder="Password" required>
                                 </div>
+				{% for message in get_flashed_messages() %}
+				    <div class="flash">{{ message }}</div>
+				{% endfor %}
                                 <div class="form-group text-right">
                                     <input type="submit" class="btn btn-primary" value="Register">
                                 </div>
@@ -102,16 +83,15 @@
         <footer class="footer container container-2">
             <div class="row">
                 <p class="col-sm-7">Copyright 2021 Simply Amazed Co.</p>
-                <p class="col-sm-5 text-right design">Design: <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate</a></p>
             </div>
         </footer>
     </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.singlePageNav.min.js"></script>
-    <script src="js/slick.js"></script>
-    <script src="js/parallax.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <!--<script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>-->
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.singlePageNav.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/slick.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/parallax.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/templatemo-script.js') }}"></script>
 </body>
 </html>
 
