--- a/ems/templates/dashboard/fund_wallet_paystack.html
+++ b/ems/templates/dashboard/fund_wallet_paystack.html
@@ -1,1 +1,30 @@
-<h2>Fund wallet here<h2/>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fund with Paystack</title>
+    <!--<link rel="stylesheet" href="{{ url_for('static', filename='css.css') }}" > -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
+    <!--link rel="stylesheet" href="{{ url_for('static', filename='tooplate-simply-amazed.css') }}" > -->
+</head>
+<body>
+	<div class="container">
+	        <div>
+	            <h3>Pay here with paystack<h3/><hr>
+	        <div/>
+		<form method="POST">
+		    <div class="mb-3">
+		        <label for="email" class="form-label">Email:</label>
+		        <input type="email" id="email" name="email" class="form-control" required>
+		    </div>
+		    <div class="mb-3">
+		        <label for="amount" class="form-label">Amount (NGN):</label>
+		        <input type="number" id="amount" name="amount" class="form-control" required>
+		    </div>
+		    <button type="submit" class="btn btn-primary" onclick="payWithPaystack()">Pay with Paystack</button>
+		</form>
+	<div/>
+    <script src="https://js.paystack.co/v1/inline.js"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"><script/>
+<body/>
