--- a/ems/templates/index.html
+++ b/ems/templates/index.html
@@ -48,6 +48,7 @@
             <div class="banner-section section parallax-window" data-parallax="scroll" data-image-src="{{ url_for('static', filename='img/section-1-bg.jpg') }}" id="section-1">
                 <div class="container">
                     <div class="item">
+                        <div class="bg-blue-transparent simple logo-fa"><p>Welcome to <span style="font-family: raleway, cursive; font-size: 3rem; color: blue;">EMS<span/></p></div>
                         <div class="bg-blue-transparent logo-fa"><span><i class="fas fa-2x fa-atom"></i></span> Simply Amazing Offers</div>
                         <div class="bg-blue-transparent simple"><p>Your reliable plug for your mobile services</p></div>
                     </div>
